# Cybersecurity-Master

./: .gitignore  LICENSE  README.md  pyproject.toml
Assignment/: zkp.ipynb
CryptoHack/Arithmetic/: solution.ipynb
CryptoHack/CipherBlock/: add_round_key_b67b9a529ae739156107a74b14adde98.py  sbox_8fc04ffb95faf5a5e6959195d5e2d94e.py  solution.ipynb
CryptoHack/Introduction/: solution.ipynb
CryptoHack/Other/: solution.ipynb
CryptoHack/Public-Key/: solution.ipynb
Lab1/JsCode/: works.js
Lab1/PyCode/: works.py
Lab11/: encryptme.py  lab.ipynb
Lab18/: lab.ipynb
Lab6/: lab.py
Lab8/: hashes.txt
